--- a/CardUser.css
+++ b/CardUser.css
@@ -1,4 +1,11 @@
-
+*{
+    /* padding: 0%;
+margin: 0%; */
+/* justify-content: center; */
+/* margin-left: auto;
+margin-right: auto; */
+/* border:  red dotted; */
+}
 
 .bodyUserCard{
 /* height: 50px;
