--- a/CardUser.css
+++ b/CardUser.css
@@ -12,6 +12,8 @@ margin-right: auto; */
 width: 70px;
 border: 3px rgb(160, 141, 102) solid; */
 border: 2px rgb(181, 177, 177) solid;
+overflow: hidden;
+
 }
 
 
